[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Enemies/Capanga1/Enemy1head.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]
[ext_resource path="res://Assets/Enemies/Capanga1/enmybody1sheett.png" type="Texture" id=3]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Enemies/Capanga1/Enmy1Legg.png" type="Texture" id=5]
[ext_resource path="res://Boxes/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://ataqueenemy.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "attack"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 3, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1.19209e-07, -2 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -90.0, -106.0, -90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Hitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 18.2608

[sub_resource type="CircleShape2D" id=3]
radius = 13.3581

[sub_resource type="CircleShape2D" id=4]
radius = 70.8924

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 12.6491, 14.1352 )

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -8.5, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -9.5, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -8.5, 2.38419e-07 ), Vector2( -6.5, 0 ), Vector2( -8.5, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -9, 0 ), Vector2( -10, 0 ), Vector2( -9, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 7.96568, 12.3713 )

[node name="Enemy" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( -9.5, 0 )
rotation = 1.5708
texture = ExtResource( 5 )
hframes = 8
frame = 5

[node name="Sprite4" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 3 )
hframes = 4
script = ExtResource( 7 )

[node name="Playera" type="AnimationPlayer" parent="Sprite4"]
anims/attack = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="Sprite4"]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite4/Area2D"]
position = Vector2( 0, -8.5 )
shape = SubResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -8.5, 0 )
rotation = -1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -8.5, -1.90735e-06 )
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 34

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 66.0941, -1.41582 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -6.5, 0 )
shape = SubResource( 5 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -6.45936, 8.39233e-05 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 6 )
anims/walk = SubResource( 7 )

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
position = Vector2( 6.5, 0 )
collision_layer = 0
collision_mask = 9

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -3.92045, 0.210224 )
shape = SubResource( 8 )
disabled = true
[connection signal="area_entered" from="Sprite4/Area2D" to="Sprite4" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Sprite4/Area2D" to="Sprite4" method="_on_Area2D_area_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]

[editable path="Hitbox"]
